@@ -1,9 +1,12 @@
 name = Dist-Zilla-PluginBundle-OLIVER
 
-; Auto will not discover these
+; AutoPrereqs will not discover these
 [Prereqs]
 Dist::Zilla::Plugin::ReadmeFromPod = 0
+Dist::Zilla::Plugin::MetaResourcesFromGit = 0
+Dist::Zilla::PluginBundle::Basic   = 0
 Dist::Zilla::PluginBundle::Filter  = 0
+Dist::Zilla::PluginBundle::Git     = 0
 Dist::Zilla::Plugin::PodWeaver     = 0
 
 ; self-hosting!
